--- a/android/app/src/main/res/layout/fragment_radio.xml
+++ b/android/app/src/main/res/layout/fragment_radio.xml
@@ -5,13 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:text="@string/launch_btn_text"/>
+
     <RelativeLayout
         android:id="@+id/radio_fragment_linear_layout"
-        android:layout_width="368dp"
-        android:layout_height="395dp"
+        android:layout_width="match_parent"
+        android:layout_height="334dp"
+        android:layout_marginTop="65dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="108dp">
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="16dp">
+
 
         <LinearLayout
             android:id="@+id/radio_transmit_section"
