--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -67,13 +67,23 @@
 
                 <TextView
                     android:id="@+id/errorText"
-                    android:layout_width="10dp"
+                    android:layout_width="300dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:fontFamily="@font/lato"
                     android:gravity="center"
                     android:text="No messages at this time."
                     android:textAlignment="textStart"
+                    android:textColor="@android:color/background_light"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/packetCntText"
+                    android:layout_width="40dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0"
+                    android:gravity="center"
+                    android:textAlignment="center"
                     android:textColor="@android:color/background_light"
                     android:textSize="18sp" />
 
@@ -125,21 +135,28 @@
                 android:layout_weight="1"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/speedText"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:lineSpacingExtra="18sp"
-                    android:text="x0"
-                    android:textAlignment="center"
-                    android:textSize="30sp" />
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/speedText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:lineSpacingExtra="18sp"
+                        android:text="x0"
+                        android:textAlignment="center"
+                        android:textSize="30sp" />
+                </LinearLayout>
 
                 <SeekBar
                     android:id="@+id/speedSeek"
                     style="@style/Widget.AppCompat.SeekBar.Discrete"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:max="10"
+                    android:max="8"
                     android:progress="3" />
 
                 <ListView
