--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
@@ -66,26 +65,27 @@
                     android:textSize="24sp" />
 
                 <TextView
-                    android:id="@+id/errorText"
-                    android:layout_width="300dp"
+                    android:id="@+id/orientationText"
+                    android:layout_width="10dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:fontFamily="@font/lato"
                     android:gravity="center"
-                    android:text="No messages at this time."
-                    android:textAlignment="textStart"
-                    android:textColor="@android:color/background_light"
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:id="@+id/packetCntText"
-                    android:layout_width="40dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0"
-                    android:gravity="center"
+                    android:text="Orientation"
                     android:textAlignment="center"
                     android:textColor="@android:color/background_light"
                     android:textSize="18sp" />
+
+                <com.joanzapata.iconify.widget.IconTextView
+                    android:id="@+id/orientationDirText"
+                    android:layout_width="70dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0"
+                    android:gravity="center"
+                    android:text="{fa-arrow-up}"
+                    android:textAlignment="textStart"
+                    android:textColor="@android:color/background_light"
+                    android:textSize="24sp" />
 
             </LinearLayout>
         </LinearLayout>
