Fix rover drive time when upside down

--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -160,8 +160,8 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="ToggleButton"
-                        android:textOff="Backward"
-                        android:textOn="Foward" />
+                        android:textOff="Foward"
+                        android:textOn="Backward" />
                 </LinearLayout>
 
                 <RadioGroup
